[metadata]
name = detd
version = 0.1.dev0
# FIXME Pick version up from __init__.py
# See https://github.com/pypa/setuptools/pull/1753
# version = attr: detd.__version__
description = TSN Service Prototype
long_description = A proof-of-concept for a developer-friendly system service to handle time-sensitive applications.

license = BSD 3-Clause License
license_file = LICENSE

author = Hector Blanco Alcaine
author_email = hector.blanco.alcaine@intel.com

url = https://github.com/Avnu/detd


[options]
packages = find:
# The requires below have been used as reference baseline for detd's release
# tests and security checks.
# Modify these requires at your own risk!
python_requires = >=3.8, <3.9
install_requires =
       protobuf ==3.6.1.3
       pyroute2
scripts =
	setup_qos.sh
	detd/detd


[options.package_data]
detd = *.proto


[options.exclude_package_data]
detd =
	detd.service
	detd


[coverage:run]
omit=/usr/lib/python3/dist-packages/*, tests/*
concurrency = multiprocessing
parallel = True
